Added pitstops sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Notable" rel="stylesheet">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8p73THm2DBKXWy3wkJD7bL0PvtNcCUIM&libraries=places&sensor=false&language=en"></script>
+
+
 </head>
 <body>
   <app-root></app-root>
