--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Nomad Pitstops</title>
-  <base href="/">
+    <head>
+        <meta charset="utf-8" />
+        <title>Nomad Pitstops</title>
+        <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Notable" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <!-- Fonts -->
+        <link
+            href="https://fonts.googleapis.com/css?family=Notable"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Raleway"
+            rel="stylesheet"
+        />
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8p73THm2DBKXWy3wkJD7bL0PvtNcCUIM&libraries=places&sensor=false&language=en"></script>
+        <!-- Font Awesome -->
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+            integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+            crossorigin="anonymous"
+        />
 
+        <!-- Google maps -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8p73THm2DBKXWy3wkJD7bL0PvtNcCUIM&libraries=places&sensor=false&language=en"></script>
 
-</head>
-<body>
-  <app-root></app-root>
-</body>
+        <!-- Pintreseet -->
+        <script
+            type="text/javascript"
+            async
+            defer
+            src="//assets.pinterest.com/js/pinit.js"
+        ></script>
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
