Fixed routing removed api from front end code

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,14 @@
             integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
             crossorigin="anonymous"
         />
-
+    </head>
+    <body>
+        <app-root></app-root>
         <!-- Google maps -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8p73THm2DBKXWy3wkJD7bL0PvtNcCUIM&libraries=places&sensor=false&language=en"></script>
+        <script
+            type="text/javascript"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8p73THm2DBKXWy3wkJD7bL0PvtNcCUIM&libraries=places&sensor=false&language=en"
+        ></script>
 
         <!-- Pintreseet -->
         <script
@@ -35,8 +40,5 @@
             defer
             src="//assets.pinterest.com/js/pinit.js"
         ></script>
-    </head>
-    <body>
-        <app-root></app-root>
     </body>
 </html>
