--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
             integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
             crossorigin="anonymous"
         />
+        <link
+            href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <app-root></app-root>
@@ -32,13 +36,35 @@
             type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8p73THm2DBKXWy3wkJD7bL0PvtNcCUIM&libraries=places&sensor=false&language=en"
         ></script>
-
-        <!-- Pintreseet -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script
-            type="text/javascript"
             async
-            defer
-            src="//assets.pinterest.com/js/pinit.js"
+            src="https://www.googletagmanager.com/gtag/js?id=UA-133439263-1"
         ></script>
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                (i[r] =
+                    i[r] ||
+                    function() {
+                        (i[r].q = i[r].q || []).push(arguments);
+                    }),
+                    (i[r].l = 1 * new Date());
+                (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m);
+            })(
+                window,
+                document,
+                'script',
+                'https://www.google-analytics.com/analytics.js',
+                'ga'
+            );
+
+            // gtag('config', 'UA-133439263-1');
+            window.ga('create', 'UA-133439263-1', 'auto');
+            // ga('send', 'pageview');
+        </script>
     </body>
 </html>
