made blogs look for snippets

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             rel="stylesheet"
         />
         <link
-            href="https://fonts.googleapis.com/css?family=Raleway"
+            href="https://fonts.googleapis.com/css?family=Open+Sans"
             rel="stylesheet"
         />
 
